--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>About Us - Lotus Lions</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
@@ -11,34 +11,46 @@
   </style>
 </head>
 <body class="bg-gray-50">
+
   <!-- Header -->
- <header class="bg-gray-900 text-white shadow-md">
+  <header class="bg-gray-900 text-white shadow-md">
     <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-        
-      <div class="text-2xl font-bold">Lotus Lions </div>
+      <div class="text-2xl font-bold">Lotus Lions</div>
       <div class="space-x-6">
-        <a href="index.html" class="hover:text-purple-200">Home</a>
-        <a href="team.html" class="hover:text-purple-200">Team</a>
-        <a href="about.html" class="hover:text-purple-200">About</a>
-        <a href="contact.html" class="hover:text-purple-200">Contact</a>
+        <a href="index.html" class="hover:text-purple-300">Home</a>
+        <a href="team.html" class="hover:text-purple-300">Team</a>
+        <a href="about.html" class="text-purple-400 font-semibold underline">About</a>
+        <a href="schedule.html" class="hover:text-purple-300">Schedule</a>
+        <a href="contact.html" class="hover:text-purple-300">Contact</a>
       </div>
     </nav>
   </header>
 
   <!-- About Section -->
-  <section class="py-16 bg-white">
-  <div class="container mx-auto px-6 max-w-4xl">
-    <h2 class="text-4xl font-bold text-purple-700 mb-6 text-center">About Us</h2>
-    <p class="text-lg text-gray-700 leading-relaxed mb-6">
-      Founded in 2017, the <strong>Lotus Lions</strong> have quickly grown into one of Cape Town’s most promising junior volleyball teams. With a passion for the sport and a drive to succeed, our team has competed in numerous tournaments, bringing home multiple trophies and proudly representing at the prestigious Club Champs.
-    </p>
-    <p class="text-lg text-gray-700 leading-relaxed mb-6">
-      In 2025, Lotus Lions entered an exciting new era under fresh ownership — bringing renewed energy, vision, and leadership to the team. As a young and dynamic squad, we're fueled by potential, unity, and the hunger to grow into champions of the future.
-    </p>
-    <p class="text-lg text-gray-700 leading-relaxed">
-      With a focus on development, discipline, and teamwork, the Lotus Lions are more than just a team — we're a family. Join us as we continue to rise and inspire the next generation of volleyball stars.
-    </p>
-  </div>
-</section>
+  <section class="py-20 bg-white">
+    <div class="container mx-auto px-6 max-w-4xl text-center">
+      <h2 class="text-5xl font-bold text-purple-700 mb-6">Who Are We?</h2>
+      <p class="text-lg text-gray-700 leading-relaxed mb-6">
+        The <strong>Lotus Lions</strong> were born in 2017 with a vision: to build a youth volleyball team that blends raw talent with unbreakable spirit. From local courts to national arenas, we’ve carved out a name as one of Cape Town’s fiercest junior squads — one serve, one block, and one point at a time.
+      </p>
+      <p class="text-lg text-gray-700 leading-relaxed mb-6">
+        Our journey took a bold leap in 2025 when new leadership infused the team with fresh ambition and unstoppable drive. Now, every training session, every match, and every huddle is a step toward something greater — **becoming the champions we know we can be**.
+      </p>
+      <p class="text-lg text-gray-700 leading-relaxed mb-10">
+        But we’re more than just volleyball players. We are **brothers in arms**, bonded by sweat, shared victories, and a passion for the game. We lift each other up — and we rise together. 🏐💪
+      </p>
+
+      <!-- Fun Team Photo -->
+      <img src="image/Team Photo.jpg" alt="Lotus Lions Team" class="rounded-xl shadow-lg mx-auto w-full max-w-2xl mb-10">
+
+      <!-- Call to Action -->
+      <div class="text-center">
+        <h3 class="text-2xl font-semibold text-gray-800 mb-2">Want to be part of the pride?</h3>
+        <p class="text-gray-600 mb-4">We’re always scouting for talent, passion, and heart. Come train with us and see if you’ve got what it takes!</p>
+        <a href="contact.html" class="inline-block px-6 py-3 bg-purple-600 text-white font-semibold rounded-full shadow-md hover:bg-purple-700 transition duration-300">Join the Team</a>
+      </div>
+    </div>
+  </section>
+
 </body>
 </html>
