--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,9 @@
         <a href="index.html" class="hover:text-purple-200">Home</a>
         <a href="team.html" class="hover:text-purple-200">Team</a>
         <a href="about.html" class="hover:text-purple-200">About</a>
+         <a href="schedule.html" class="hover:underline">Schedule</a>
         <a href="contact.html" class="hover:text-purple-200">Contact</a>
+        
       </div>
     </nav>
   </header>
