--- a/index.html
+++ b/index.html
@@ -6,72 +6,90 @@
   <title>Lotus Lions Volleyball Team</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <style>body { font-family: 'Poppins', sans-serif; }</style>
+  <style>
+    body { font-family: 'Poppins', sans-serif; }
+  </style>
 </head>
 <body class="bg-gray-50">
 
-  <!-- Header and nav bar-->
-
-<header class="bg-gray-900 text-white shadow-md">
-  <nav class="container mx-auto px-6 py-4 flex items-center justify-between">
-    <!-- Logo -->
-    <div class="flex items-center space-x-4">
-      <img src="image/LotusLions_logo.png" alt="Lotus Lions Logo" class="h-10 w-auto">
-      <span class="text-2xl font-bold text-white">Lotus Lions</span>
-    </div>
-
- 
-    <div class="hidden md:flex space-x-6 text-white font-medium">
-      <a href="index.html" class="hover:text-blue-400 transition">Home</a>
-      <a href="team.html" class="hover:text-blue-400 transition">Team</a>
-      <a href="about.html" class="hover:text-blue-400 transition">About</a>
-      <a href="contact.html" class="hover:text-blue-400 transition">Contact</a>
-    </div>
-  </nav>
-</header>
+  <!-- Header -->
+  <header class="bg-gray-900 text-white shadow-md">
+    <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
+      <div class="flex items-center space-x-4">
+        <img src="image/LotusLions_logo.png" alt="Lotus Lions Logo" class="h-10 w-auto">
+        <span class="text-2xl font-bold">Lotus Lions</span>
+      </div>
+      <div class="space-x-6 text-white font-medium">
+        <a href="index.html" class="hover:text-purple-200">Home</a>
+        <a href="team.html" class="hover:text-purple-200">Team</a>
+        <a href="about.html" class="hover:text-purple-200">About</a>
+        <a href="schedule.html" class="hover:underline">Schedule</a>
+        <a href="contact.html" class="hover:text-purple-200">Contact</a>
+      </div>
+    </nav>
+  </header>
 
   <!-- Hero Section -->
-<section class="bg-gray-900 text-white py-20 text-center">
-  <div class="container mx-auto px-6">
-    <h1 class="text-5xl font-bold mb-4">Welcome to Lotus Lions</h1>
-    <p class="text-xl mb-6">Cape Town’s rising stars in junior volleyball since 2017</p>
-    
-  </div>
-</section>
+  <section class="bg-gray-900 text-white py-20 text-center">
+    <div class="container mx-auto px-6">
+      <h1 class="text-5xl font-bold mb-4">Welcome to Lotus Lions</h1>
+      <p class="text-xl mb-6">Cape Town’s rising stars in junior volleyball since 2017</p>
+    </div>
+  </section>
 
-  <!-- Player of the Match  stuff -->
-
-<section class="py-16 bg-purple-50">
-  <div class="container mx-auto px-6 max-w-4xl text-center">
-    <h2 class="text-3xl font-bold text-purple-700 mb-6">🏅 Player of the Match</h2>
-
-    <div class="bg-white rounded-xl shadow-lg p-6 transition-transform duration-300 hover:scale-105 hover:shadow-2xl">
-      <img src="image/Liks.jpg" alt="Player of the Match" class="w-40 h-40 rounded-full mx-auto object-cover mb-4 border-4 border-purple-300">
-      <h3 class="text-2xl font-semibold text-gray-800">Likhona Ncamelen</h3>
-      <p class="text-purple-600 font-medium">Utility </p>
-      <p class="text-gray-600 mt-3">👏 Recognized for his game winning blocks and incredible on court spirit or whatever during the game</p>
-
-      <div class="mt-4 opacity-0 hover:opacity-100 transition-opacity duration-300">
-        <div class="grid grid-cols-3 text-sm mt-2 text-gray-700">
-          <div>
-         <!-- This allows a user to Hover over the Player of the match card and see there stats  feel free to change shit-->  
-            <p class="font-semibold">Assists</p>  
-            <p>28</p>
-          </div>
-          <div>
-            <p class="font-semibold">Aces</p>
-            <p>4</p>
-          </div>
-          <div>
-            <p class="font-semibold">Points</p>
-            <p>16</p>
-          </div>
-        </div>
+  <!-- Player of the Match -->
+  <section id="potm" class="py-16 bg-white text-center">
+    <div class="container mx-auto">
+      <h2 class="text-3xl font-bold text-purple-700 mb-6">🏐 Player of the Match</h2>
+      <div id="potmDisplay" class="max-w-xl mx-auto bg-gray-100 p-6 rounded-lg shadow-md hidden">
+        <img id="potmImg" src="" class="mx-auto w-40 h-40 object-cover rounded-full mb-4" />
+        <h3 id="potmName" class="text-xl font-semibold"></h3>
+        <p id="potmStats" class="text-gray-600 mt-2"></p>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
+  <!-- Footer -->
+  <footer class="bg-gray-800 text-gray-300 py-6 mt-12">
+    <div class="container mx-auto px-4 text-center space-y-4">
+      <!-- Admin Login -->
+      <div>
+        <a href="login.html" class="text-white hover:text-blue-400 font-semibold transition duration-300">
+          Admin Log in
+        </a>
+      </div>
+
+      <!-- Social Media Links -->
+      <div class="flex justify-center space-x-6">
+        <a href="https://www.instagram.com/lotuslions/?hl=en" target="_blank" class="hover:text-pink-500 transition">
+          <i class="fab fa-instagram"></i> Instagram
+        </a>
+        <a href="https://facebook.com" target="_blank" class="hover:text-blue-500 transition">
+          <i class="fab fa-facebook"></i> Facebook
+        </a>
+        <a href="https://www.youtube.com/@Shakeel_davids" target="_blank" class="hover:text-red-500 transition">
+          <i class="fab fa-youtube"></i> YouTube
+        </a>
+      </div>
+
+      <!-- Footer Text -->
+      <div class="text-sm text-gray-400">
+        &copy; 2025 Lotus Lions Volleyball Club. All rights reserved. <br />
+        Built with ❤️ for the game. Cape Town, South Africa.
+      </div>
+    </div>
+  </footer>
+
+  <!-- JavaScript -->
+  <script>
+    const potm = JSON.parse(localStorage.getItem('playerOfTheMatch'));
+    if (potm) {
+      document.getElementById('potmImg').src = potm.image;
+      document.getElementById('potmName').textContent = potm.name;
+      document.getElementById('potmStats').textContent = potm.stats;
+      document.getElementById('potmDisplay').classList.remove('hidden');
+    }
+  </script>
 
 </body>
 </html>
