Set up Supabase database and authentication

--- a/schedule.html
+++ b/schedule.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <title>Match Schedule | Lotus Lions</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
 </head>
 <body class="bg-gray-900 text-white min-h-screen flex flex-col">
-
   <!-- Navbar -->
   <nav class="bg-gray-800 px-6 py-4 flex justify-between items-center shadow-md">
     <div class="text-white font-bold text-xl">
@@ -26,7 +26,6 @@
 
   <!-- Main content -->
   <main class="flex-grow p-6 max-w-4xl mx-auto w-full">
-
     <!-- Column headers -->
     <div class="grid grid-cols-1 sm:grid-cols-3 gap-4 mb-4 text-blue-400 font-semibold text-center border-b border-gray-700 pb-2">
       <div>Opponent</div>
@@ -39,30 +38,53 @@
   </main>
 
   <script>
-    const matches = JSON.parse(localStorage.getItem('matchSchedule')) || [];
-    const scheduleList = document.getElementById('scheduleList');
+    const supabase = supabase.createClient(
+      import.meta.env.VITE_SUPABASE_URL,
+      import.meta.env.VITE_SUPABASE_ANON_KEY
+    );
 
-    if (matches.length === 0) {
-      scheduleList.innerHTML = "<p class='text-center text-gray-400'>No matches scheduled yet.</p>";
-    } else {
-      matches.forEach(match => {
-        const dateObj = new Date(match.dateTime);
+    async function loadSchedule() {
+      const { data: matches, error } = await supabase
+        .from('scheduled_games')
+        .select('*')
+        .order('game_date', { ascending: true });
+
+      const scheduleList = document.getElementById('scheduleList');
+
+      if (error) {
+        scheduleList.innerHTML = "<p class='text-center text-red-400'>Error loading schedule. Please try again later.</p>";
+        return;
+      }
+
+      if (!matches || matches.length === 0) {
+        scheduleList.innerHTML = "<p class='text-center text-gray-400'>No matches scheduled yet.</p>";
+        return;
+      }
+
+      scheduleList.innerHTML = matches.map(match => {
+        const dateObj = new Date(match.game_date);
         const formattedDate = dateObj.toLocaleString('en-ZA', {
-          weekday: 'long', day: '2-digit', month: 'short', year: 'numeric',
-          hour: '2-digit', minute: '2-digit', hour12: true
+          weekday: 'long',
+          day: '2-digit',
+          month: 'short',
+          year: 'numeric',
+          hour: '2-digit',
+          minute: '2-digit',
+          hour12: true
         });
 
-        const item = document.createElement('div');
-        item.className = "grid grid-cols-1 sm:grid-cols-3 gap-4 bg-gray-800 p-4 rounded shadow-lg text-center";
-        item.innerHTML = `
-          <div class="text-lg font-semibold">vs <span class="text-blue-400">${match.opponent}</span></div>
-          <div class="text-sm text-gray-300">${match.location}</div>
-          <div class="text-sm text-gray-400">${formattedDate}</div>
+        return `
+          <div class="grid grid-cols-1 sm:grid-cols-3 gap-4 bg-gray-800 p-4 rounded shadow-lg text-center">
+            <div class="text-lg font-semibold">vs <span class="text-blue-400">${match.opponent}</span></div>
+            <div class="text-sm text-gray-300">${match.location} (${match.is_home_game ? 'Home' : 'Away'})</div>
+            <div class="text-sm text-gray-400">${formattedDate}</div>
+          </div>
         `;
-        scheduleList.appendChild(item);
-      });
+      }).join('');
     }
-  </script>
 
+    // Load schedule when page loads
+    loadSchedule();
+  </script>
 </body>
 </html>
