--- a/login.html
+++ b/login.html
@@ -5,20 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin Login | Lotus Lions</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
   <style>
     body { font-family: 'Poppins', sans-serif; }
   </style>
 </head>
 <body class="bg-gray-900 text-white flex items-center justify-center h-screen">
-
   <div class="bg-gray-800 p-8 rounded-lg shadow-md w-full max-w-md">
     <h2 class="text-3xl font-bold text-center mb-6">Admin Login</h2>
-    <form action="#" method="POST" id="loginForm">
-      <div class="mb-4">
-        <label for="username" class="block text-sm mb-2">Username</label>
-        <input type="text" id="username" class="w-full p-2 rounded bg-gray-700 text-white focus:outline-none" required />
+    <form id="loginForm" class="space-y-4">
+      <div>
+        <label for="email" class="block text-sm mb-2">Email</label>
+        <input type="email" id="email" class="w-full p-2 rounded bg-gray-700 text-white focus:outline-none" required />
       </div>
-      <div class="mb-6">
+      <div>
         <label for="password" class="block text-sm mb-2">Password</label>
         <input type="password" id="password" class="w-full p-2 rounded bg-gray-700 text-white focus:outline-none" required />
       </div>
@@ -26,28 +26,39 @@
         Login
       </button>
     </form>
-    <p id="errorMsg" class="text-red-500 text-sm mt-4 hidden">Invalid credentials</p>
+    <p id="errorMsg" class="text-red-500 text-sm mt-4 text-center hidden"></p>
   </div>
 
- <script>
-  const form = document.getElementById('loginForm');
-  const errorMsg = document.getElementById('errorMsg');
+  <script>
+    const supabase = supabase.createClient(
+      import.meta.env.VITE_SUPABASE_URL,
+      import.meta.env.VITE_SUPABASE_ANON_KEY
+    );
 
-  form.addEventListener('submit', function(e) {
-    e.preventDefault();
+    const form = document.getElementById('loginForm');
+    const errorMsg = document.getElementById('errorMsg');
 
-    const username = document.getElementById('username').value;
-    const password = document.getElementById('password').value;
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
 
-    if (username === 'Admin' && password === 'Joshua') {
-      localStorage.setItem('isLoggedIn', 'true'); 
-      window.location.href = 'admin-dashboard.html';
-    } else {
-      errorMsg.classList.remove('hidden');
-    }
-  });
-</script>
+      try {
+        const { data, error } = await supabase.auth.signInWithPassword({
+          email,
+          password
+        });
 
+        if (error) throw error;
 
+        localStorage.setItem('isLoggedIn', 'true');
+        window.location.href = 'admin-dashboard.html';
+      } catch (error) {
+        errorMsg.textContent = 'Invalid credentials';
+        errorMsg.classList.remove('hidden');
+      }
+    });
+  </script>
 </body>
 </html>
