--- a/team.html
+++ b/team.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Lotus Lions Team</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body { font-family: 'Poppins', sans-serif; }
   </style>
 </head>
 <body class="bg-gradient-to-r from-gray-900 via-gray-800 to-gray-900 text-white min-h-screen">
-
   <!-- Header -->
   <header class="bg-gray-900 text-white shadow-md">
     <nav class="container mx-auto px-6 py-4 flex justify-between">
@@ -32,72 +32,47 @@
       <p class="text-gray-300 text-lg">A powerhouse of skill, speed, and spirit!</p>
     </div>
 
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-10 max-w-6xl mx-auto">
-      <!-- Player Card Template -->
-      <div class="bg-white text-gray-900 rounded-xl shadow-lg p-6 text-center hover:scale-105 transform transition duration-300">
-        <img src="image/Brain.jpg" alt="Middle Blocker" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover">
-        <h3 class="text-xl font-semibold">Brian Manewyk</h3>
-        <p class="text-gray-700">Position: Middle Blocker</p>
-        <p class="text-sm text-gray-500 mt-2">The playmaker, setting up every strike!</p>
-      </div>
-
-      <div class="bg-white text-gray-900 rounded-xl shadow-lg p-6 text-center hover:scale-105 transform transition duration-300">
-        <img src="image/Jev.jpg" alt="Middle Blocker" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover">
-        <h3 class="text-xl font-semibold">Jevonne Badenhorst</h3>
-        <p class="text-gray-700">Position: Middle Blocker</p>
-        <p class="text-sm text-gray-500 mt-2">Dominating the net with powerful blocks.</p>
-      </div>
-
-      <div class="bg-white text-gray-900 rounded-xl shadow-lg p-6 text-center hover:scale-105 transform transition duration-300">
-        <img src="image/ansaar.jpg" alt="Libero" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover">
-        <h3 class="text-xl font-semibold">Ansaar</h3>
-        <p class="text-gray-700">Position: Libero</p>
-        <p class="text-sm text-gray-500 mt-2">Defensive wall — nothing gets past him.</p>
-      </div>
-
-      <div class="bg-white text-gray-900 rounded-xl shadow-lg p-6 text-center hover:scale-105 transform transition duration-300">
-        <img src="image/laeeq.jpg" alt="Outside Hitter" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover">
-        <h3 class="text-xl font-semibold">Laeeq Abrahams</h3>
-        <p class="text-gray-700">Position: Outside Hitter</p>
-        <p class="text-sm text-gray-500 mt-2">Unleashing spikes like lightning bolts!</p>
-      </div>
-
-      <div class="bg-white text-gray-900 rounded-xl shadow-lg p-6 text-center hover:scale-105 transform transition duration-300">
-        <img src="image/Liks.jpg" alt="Utility" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover">
-        <h3 class="text-xl font-semibold">Likhona Ncameleni</h3>
-        <p class="text-gray-700">Position: Utility</p>
-        <p class="text-sm text-gray-500 mt-2">A versatile force — ready for anything.</p>
-      </div>
-
-      <div class="bg-white text-gray-900 rounded-xl shadow-lg p-6 text-center hover:scale-105 transform transition duration-300">
-        <img src="image/Shakeel.jpg" alt="Outside Hitter" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover">
-        <h3 class="text-xl font-semibold">Shakeel Davids</h3>
-        <p class="text-gray-700">Position: Outside Hitter</p>
-        <p class="text-sm text-gray-500 mt-2">Fast, fierce, and always focused.</p>
-      </div>
-
-      <div class="bg-white text-gray-900 rounded-xl shadow-lg p-6 text-center hover:scale-105 transform transition duration-300">
-        <img src="image/xavi.jpg" alt="Libero" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover">
-        <h3 class="text-xl font-semibold">Xavier van der Ross</h3>
-        <p class="text-gray-700">Position: Libero</p>
-        <p class="text-sm text-gray-500 mt-2">Speedy saves and slick dives.</p>
-      </div>
-
-      <div class="bg-white text-gray-900 rounded-xl shadow-lg p-6 text-center hover:scale-105 transform transition duration-300">
-        <img src="image/Pot.jpg" alt="Utility" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover">
-        <h3 class="text-xl font-semibold">Caleb Rhode</h3>
-        <p class="text-gray-700">Position: Utility</p>
-        <p class="text-sm text-gray-500 mt-2">Jack of all trades. Fearless always.</p>
-      </div>
-
-      <div class="bg-white text-gray-900 rounded-xl shadow-lg p-6 text-center hover:scale-105 transform transition duration-300">
-        <img src="image/Bekko.jpg" alt="Setter" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover">
-        <h3 class="text-xl font-semibold">Thaafir</h3>
-        <p class="text-gray-700">Position: Setter</p>
-        <p class="text-sm text-gray-500 mt-2">The brain behind the court's attack.</p>
-      </div>
+    <div id="playerGrid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-10 max-w-6xl mx-auto">
+      <!-- Players will be loaded here dynamically -->
     </div>
   </section>
 
+  <script>
+    const supabase = supabase.createClient(
+      import.meta.env.VITE_SUPABASE_URL,
+      import.meta.env.VITE_SUPABASE_ANON_KEY
+    );
+
+    async function loadPlayers() {
+      const { data: players, error } = await supabase
+        .from('players')
+        .select('*')
+        .order('name', { ascending: true });
+
+      const playerGrid = document.getElementById('playerGrid');
+
+      if (error) {
+        playerGrid.innerHTML = "<p class='text-center text-red-400 col-span-3'>Error loading players. Please try again later.</p>";
+        return;
+      }
+
+      if (!players || players.length === 0) {
+        playerGrid.innerHTML = "<p class='text-center text-gray-400 col-span-3'>No players found.</p>";
+        return;
+      }
+
+      playerGrid.innerHTML = players.map(player => `
+        <div class="bg-white text-gray-900 rounded-xl shadow-lg p-6 text-center hover:scale-105 transform transition duration-300">
+          <img src="${player.image_url}" alt="${player.name}" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover">
+          <h3 class="text-xl font-semibold">${player.name} ${player.surname}</h3>
+          <p class="text-gray-700">Position: ${player.position}</p>
+          <p class="text-sm text-gray-500 mt-2">${player.description || ''}</p>
+        </div>
+      `).join('');
+    }
+
+    // Load players when page loads
+    loadPlayers();
+  </script>
 </body>
 </html>
