Fix module import in login.html

--- a/login.html
+++ b/login.html
@@ -29,36 +29,6 @@
     <p id="errorMsg" class="text-red-500 text-sm mt-4 text-center hidden"></p>
   </div>
 
-  <script>
-    const supabase = supabase.createClient(
-      import.meta.env.VITE_SUPABASE_URL,
-      import.meta.env.VITE_SUPABASE_ANON_KEY
-    );
-
-    const form = document.getElementById('loginForm');
-    const errorMsg = document.getElementById('errorMsg');
-
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      
-      const email = document.getElementById('email').value;
-      const password = document.getElementById('password').value;
-
-      try {
-        const { data, error } = await supabase.auth.signInWithPassword({
-          email,
-          password
-        });
-
-        if (error) throw error;
-
-        localStorage.setItem('isLoggedIn', 'true');
-        window.location.href = 'admin-dashboard.html';
-      } catch (error) {
-        errorMsg.textContent = 'Invalid credentials';
-        errorMsg.classList.remove('hidden');
-      }
-    });
-  </script>
+  <script type="module" src="/src/login.js"></script>
 </body>
 </html>
