--- a/contact.html
+++ b/contact.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact Us - Lotus Lions</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body { font-family: 'Poppins', sans-serif; }
   </style>
 </head>
 <body class="bg-gray-50">
+
   <!-- Header -->
   <header class="bg-gray-900 text-white shadow-md">
     <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
@@ -35,178 +34,46 @@
       <form id="contactForm" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
         <div class="mb-4">
           <label class="block text-gray-700 text-sm font-bold mb-2">Name</label>
-          <input name="name" class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500" type="text" required>
+          <input name="user_name" class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500" type="text" required>
         </div>
         <div class="mb-4">
           <label class="block text-gray-700 text-sm font-bold mb-2">Email</label>
-          <input name="email" class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500" type="email" required>
+          <input name="user_email" class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500" type="email" required>
         </div>
         <div class="mb-4">
           <label class="block text-gray-700 text-sm font-bold mb-2">Message</label>
           <textarea name="message" class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500" rows="4" required></textarea>
         </div>
-        <button class="bg-purple-700 hover:bg-purple-800 text-white font-bold py-2 px-4 rounded" type="submit">Send</button>
+        <button class="bg-purple-700 hover:bg-purple-800 text-white font-bold py-2 px-4 rounded w-full" type="submit">Send</button>
         <p id="submitStatus" class="mt-4 text-center hidden"></p>
       </form>
     </div>
   </section>
 
   <script>
-    const supabase = supabase.createClient(
-      import.meta.env.VITE_SUPABASE_URL,
-      import.meta.env.VITE_SUPABASE_ANON_KEY
-    );
+    // Initialize EmailJS
+    (function() {
+      emailjs.init("qybizZbl9vbznC4F8");
+    })();
 
     const form = document.getElementById('contactForm');
     const submitStatus = document.getElementById('submitStatus');
 
-    form.addEventListener('submit', async (e) => {
+    form.addEventListener('submit', function(e) {
       e.preventDefault();
-      
-      const formData = new FormData(form);
-      const data = {
-        name: formData.get('name'),
-        email: formData.get('email'),
-        message: formData.get('message')
-      };
 
-      try {
-        const { error } = await supabase
-          .from('contact_messages')
-          .insert([data]);
-
-        if (error) throw error;
-
-        submitStatus.textContent = 'Message sent successfully!';
-        submitStatus.className = 'mt-4 text-center text-green-600';
-        submitStatus.classList.remove('hidden');
-        form.reset();
-      } catch (error) {
-        submitStatus.textContent = 'Error sending message. Please try again.';
-        submitStatus.className = 'mt-4 text-center text-red-600';
-        submitStatus.classList.remove('hidden');
-      }
+      emailjs.sendForm('josh_corp', 'template_0nqvsqc', this)
+        .then(function() {
+          submitStatus.textContent = '✅ Message sent successfully!';
+          submitStatus.className = 'mt-4 text-center text-green-600';
+          submitStatus.classList.remove('hidden');
+          form.reset();
+        }, function(error) {
+          submitStatus.textContent = '❌ Error sending message. Please try again.';
+          submitStatus.className = 'mt-4 text-center text-red-600';
+          submitStatus.classList.remove('hidden');
+        });
     });
   </script>
 </body>
-=======
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - Lotus Lions</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-
-
-    <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-        }
-    </style>
-</head>
-
-<body class="bg-gray-50">
-    <!-- Header -->
-    <header class="bg-gray-900 text-white shadow-md">
-        <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-
-
-
-            <div class="text-2xl font-bold">Lotus Lions </div>
-            <div class="space-x-6">
-                <a href="index.html" class="hover:text-purple-200">Home</a>
-                <a href="team.html" class="hover:text-purple-200">Team</a>
-                <a href="about.html" class="hover:text-purple-200">About</a>
-                <a href="schedule.html" class="hover:underline">Schedule</a>
-                <a href="contact.html" class="hover:text-purple-200">Contact</a>
-
-            </div>
-        </nav>
-    </header>
-
-    <!-- Contact Section -->
-    <section class="py-16">
-        <div class="container mx-auto px-6 max-w-2xl">
-            <h2 class="text-3xl font-bold text-center mb-8">Contact Us</h2>
-            <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
-                <div class="mb-4">
-                    <label class="block text-gray-700 text-sm font-bold mb-2">Name</label>
-                    <input class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500" type="text" placeholder="Your Name">
-                </div>
-                <div class="mb-4">
-                    <label class="block text-gray-700 text-sm font-bold mb-2">Email</label>
-                    <input class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500" type="email" placeholder="you@example.com">
-                </div>
-                <div class="mb-4">
-                    <label class="block text-gray-700 text-sm font-bold mb-2">Message</label>
-                    <textarea class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500" rows="4" placeholder="Your message..."></textarea>
-                </div>
-                <button class="bg-purple-700 hover:bg-purple-800 text-white font-bold py-2 px-4 rounded" type="submit">Send</button>
-            </form>
-        </div>
-    </section>
-</body>
-
->>>>>>> Stashed changes
-=======
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - Lotus Lions</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-
-
-    <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-        }
-    </style>
-</head>
-
-<body class="bg-gray-50">
-    <!-- Header -->
-    <header class="bg-gray-900 text-white shadow-md">
-        <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-
-
-
-            <div class="text-2xl font-bold">Lotus Lions </div>
-            <div class="space-x-6">
-                <a href="index.html" class="hover:text-purple-200">Home</a>
-                <a href="team.html" class="hover:text-purple-200">Team</a>
-                <a href="about.html" class="hover:text-purple-200">About</a>
-                <a href="schedule.html" class="hover:underline">Schedule</a>
-                <a href="contact.html" class="hover:text-purple-200">Contact</a>
-
-            </div>
-        </nav>
-    </header>
-
-    <!-- Contact Section -->
-    <section class="py-16">
-        <div class="container mx-auto px-6 max-w-2xl">
-            <h2 class="text-3xl font-bold text-center mb-8">Contact Us</h2>
-            <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
-                <div class="mb-4">
-                    <label class="block text-gray-700 text-sm font-bold mb-2">Name</label>
-                    <input class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500" type="text" placeholder="Your Name">
-                </div>
-                <div class="mb-4">
-                    <label class="block text-gray-700 text-sm font-bold mb-2">Email</label>
-                    <input class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500" type="email" placeholder="you@example.com">
-                </div>
-                <div class="mb-4">
-                    <label class="block text-gray-700 text-sm font-bold mb-2">Message</label>
-                    <textarea class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500" rows="4" placeholder="Your message..."></textarea>
-                </div>
-                <button class="bg-purple-700 hover:bg-purple-800 text-white font-bold py-2 px-4 rounded" type="submit">Send</button>
-            </form>
-        </div>
-    </section>
-</body>
-
->>>>>>> Stashed changes
 </html>
