--- a/login.html
+++ b/login.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin Login | Lotus Lions</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
   <style>
     body { font-family: 'Poppins', sans-serif; }
   </style>
@@ -28,7 +27,6 @@
     </form>
     <p id="errorMsg" class="text-red-500 text-sm mt-4 text-center hidden"></p>
   </div>
-
-  <script type="module" src="/src/login.js"></script>
+  <script type="module" src="./login.js"></script>
 </body>
 </html>
