--- a/schedule.html
+++ b/schedule.html
@@ -2,49 +2,32 @@
 <html lang="en">
 
 <head>
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
   <meta charset="UTF-8" />
   <title>Match Schedule | Lotus Lions</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Supabase client -->
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
-=======
-    <meta charset="UTF-8" />
-    <title>Match Schedule | Lotus Lions</title>
-    <script src="https://cdn.tailwindcss.com"></script>
->>>>>>> Stashed changes
 </head>
 
 <body class="bg-gray-900 text-white min-h-screen flex flex-col">
-<<<<<<< Updated upstream
+
   <!-- Navbar -->
   <nav class="bg-gray-800 px-6 py-4 flex justify-between items-center shadow-md">
-    <div class="text-white font-bold text-xl">
-      Lotus Lions
-    </div>
+    <div class="text-white font-bold text-xl">Lotus Lions</div>
     <div class="hidden md:flex space-x-6 text-white font-medium justify-end">
-      <a href="index.html" class="hover:text-blue-400 transition font-semibold">Home</a>
-      <a href="about.html" class="hover:text-blue-400 transition">About</a>
-      <a href="contact.html" class="hover:text-blue-400 transition">Contact</a>
+      <a href="index.html" class="hover:text-purple-200">Home</a>
+      <a href="team.html" class="hover:text-purple-200">Team</a>
+      <a href="about.html" class="hover:text-purple-200">About</a>
+      <a href="schedule.html" class="hover:underline">Schedule</a>
+      <a href="contact.html" class="hover:text-purple-200">Contact</a>
     </div>
   </nav>
-=======
 
-    <!-- Navbar -->
-    <nav class="bg-gray-800 px-6 py-4 flex justify-between items-center shadow-md">
-        <div class="text-white font-bold text-xl">
-            Lotus Lions
-        </div>
-        <div class="hidden md:flex space-x-6 text-white font-medium justify-end">
->>>>>>> Stashed changes
+  <!-- Page Heading -->
+  <header class="py-8 text-center">
+    <h1 class="text-5xl font-extrabold tracking-wide">LOTUS LIONS UPCOMING GAMES</h1>
+  </header>
 
-            <a href="index.html" class="hover:text-purple-200">Home</a>
-            <a href="team.html" class="hover:text-purple-200">Team</a>
-            <a href="about.html" class="hover:text-purple-200">About</a>
-            <a href="schedule.html" class="hover:underline">Schedule</a>
-            <a href="contact.html" class="hover:text-purple-200">Contact</a>
-
-<<<<<<< Updated upstream
   <!-- Main content -->
   <main class="flex-grow p-6 max-w-4xl mx-auto w-full">
     <!-- Column headers -->
@@ -53,23 +36,16 @@
       <div>Venue</div>
       <div>Date</div>
     </div>
-=======
 
-        </div>
-    </nav>
->>>>>>> Stashed changes
+    <!-- Match list -->
+    <div id="scheduleList" class="space-y-6"></div>
+  </main>
 
-    <!-- Page Heading -->
-    <header class="py-8 text-center">
-        <h1 class="text-5xl font-extrabold tracking-wide">LOTUS LIONS UPCOMING GAMES</h1>
-    </header>
-
-<<<<<<< Updated upstream
   <script>
-    const supabase = supabase.createClient(
-      import.meta.env.VITE_SUPABASE_URL,
-      import.meta.env.VITE_SUPABASE_ANON_KEY
-    );
+    // Initialize Supabase
+     const supabaseUrl ="https://qbnaecujbshbkritaddj.supabase.co";
+    const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFibmFlY3VqYnNoYmtyaXRhZGRqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDkxMjQwNTEsImV4cCI6MjA2NDcwMDA1MX0.Bbf9OTqEd3PkWA-sIUsVH23xWYjpF8JAN3dKAny0TVs";  
+   const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
     async function loadSchedule() {
       const { data: matches, error } = await supabase
@@ -80,6 +56,7 @@
       const scheduleList = document.getElementById('scheduleList');
 
       if (error) {
+        console.error("Error loading matches:", error);
         scheduleList.innerHTML = "<p class='text-center text-red-400'>Error loading schedule. Please try again later.</p>";
         return;
       }
@@ -89,7 +66,7 @@
         return;
       }
 
-      scheduleList.innerHTML = matches.map(match => {
+      matches.forEach(match => {
         const dateObj = new Date(match.game_date);
         const formattedDate = dateObj.toLocaleString('en-ZA', {
           weekday: 'long',
@@ -101,116 +78,20 @@
           hour12: true
         });
 
-        return `
-          <div class="grid grid-cols-1 sm:grid-cols-3 gap-4 bg-gray-800 p-4 rounded shadow-lg text-center">
-            <div class="text-lg font-semibold">vs <span class="text-blue-400">${match.opponent}</span></div>
-            <div class="text-sm text-gray-300">${match.location} (${match.is_home_game ? 'Home' : 'Away'})</div>
-            <div class="text-sm text-gray-400">${formattedDate}</div>
-          </div>
-        `;
-      }).join('');
-    }
-=======
-    <!-- Main content -->
-    <main class="flex-grow p-6 max-w-4xl mx-auto w-full">
-
-        <!-- Column headers -->
-        <div class="grid grid-cols-1 sm:grid-cols-3 gap-4 mb-4 text-blue-400 font-semibold text-center border-b border-gray-700 pb-2">
-            <div>Opponent</div>
-            <div>Venue</div>
-            <div>Date</div>
-        </div>
-
-=======
-    <meta charset="UTF-8" />
-    <title>Match Schedule | Lotus Lions</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-</head>
-
-<body class="bg-gray-900 text-white min-h-screen flex flex-col">
-
-    <!-- Navbar -->
-    <nav class="bg-gray-800 px-6 py-4 flex justify-between items-center shadow-md">
-        <div class="text-white font-bold text-xl">
-            Lotus Lions
-        </div>
-        <div class="hidden md:flex space-x-6 text-white font-medium justify-end">
-
-            <a href="index.html" class="hover:text-purple-200">Home</a>
-            <a href="team.html" class="hover:text-purple-200">Team</a>
-            <a href="about.html" class="hover:text-purple-200">About</a>
-            <a href="schedule.html" class="hover:underline">Schedule</a>
-            <a href="contact.html" class="hover:text-purple-200">Contact</a>
-
-
-        </div>
-    </nav>
-
-    <!-- Page Heading -->
-    <header class="py-8 text-center">
-        <h1 class="text-5xl font-extrabold tracking-wide">LOTUS LIONS UPCOMING GAMES</h1>
-    </header>
-
-    <!-- Main content -->
-    <main class="flex-grow p-6 max-w-4xl mx-auto w-full">
-
-        <!-- Column headers -->
-        <div class="grid grid-cols-1 sm:grid-cols-3 gap-4 mb-4 text-blue-400 font-semibold text-center border-b border-gray-700 pb-2">
-            <div>Opponent</div>
-            <div>Venue</div>
-            <div>Date</div>
-        </div>
-
->>>>>>> Stashed changes
-        <!-- Match list -->
-        <div id="scheduleList" class="space-y-6"></div>
-    </main>
-
-    <script>
-        const matches = JSON.parse(localStorage.getItem('matchSchedule')) || [];
-        const scheduleList = document.getElementById('scheduleList');
-
-        if (matches.length === 0) {
-            scheduleList.innerHTML = "<p class='text-center text-gray-400'>No matches scheduled yet.</p>";
-        } else {
-            matches.forEach(match => {
-                const dateObj = new Date(match.dateTime);
-                const formattedDate = dateObj.toLocaleString('en-ZA', {
-                    weekday: 'long',
-                    day: '2-digit',
-                    month: 'short',
-                    year: 'numeric',
-                    hour: '2-digit',
-                    minute: '2-digit',
-                    hour12: true
-                });
-
-                const item = document.createElement('div');
-                item.className = "grid grid-cols-1 sm:grid-cols-3 gap-4 bg-gray-800 p-4 rounded shadow-lg text-center";
-                item.innerHTML = `
+        const item = document.createElement('div');
+        item.className = "grid grid-cols-1 sm:grid-cols-3 gap-4 bg-gray-800 p-4 rounded shadow-lg text-center";
+        item.innerHTML = `
           <div class="text-lg font-semibold">vs <span class="text-blue-400">${match.opponent}</span></div>
-          <div class="text-sm text-gray-300">${match.location}</div>
+          <div class="text-sm text-gray-300">${match.location} (${match.is_home_game ? 'Home' : 'Away'})</div>
           <div class="text-sm text-gray-400">${formattedDate}</div>
         `;
-                scheduleList.appendChild(item);
-            });
-        }
-    </script>
-<<<<<<< Updated upstream
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
+        scheduleList.appendChild(item);
+      });
+    }
 
-    // Load schedule when page loads
+    // Load on page load
     loadSchedule();
   </script>
+
 </body>
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-=======
-
->>>>>>> Stashed changes
-=======
-
->>>>>>> Stashed changes
 </html>
